# AutowareArchitectureProposal.iv

./: '  .clang-format  .pre-commit-config-optional.yaml  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  build_depends.repos  q
api/autoware_iv_external_api_adaptor/: CMakeLists.txt  package.xml
api/autoware_iv_external_api_adaptor/launch/: external_api_adaptor.launch.py
api/autoware_iv_external_api_adaptor/src/: diagnostics.cpp  diagnostics.hpp  door.cpp  door.hpp  emergency.cpp  emergency.hpp  engage.cpp  engage.hpp  initial_pose.cpp  initial_pose.hpp  map.cpp  map.hpp  operator.cpp  operator.hpp  route.cpp  route.hpp  service.cpp  service.hpp  velocity.cpp  velocity.hpp  version.cpp  version.hpp
api/autoware_iv_internal_api_adaptor/: CMakeLists.txt  README.md  package.xml
api/autoware_iv_internal_api_adaptor/launch/: internal_api_adaptor.launch.py  internal_api_adaptor_relay.launch.xml  internal_api_relay.launch.xml
api/autoware_iv_internal_api_adaptor/src/: initial_pose.cpp  initial_pose.hpp  iv_msgs.cpp  iv_msgs.hpp  iv_state.cpp  iv_state.hpp  operator.cpp  operator.hpp  route.cpp  route.hpp  start.cpp  start.hpp  velocity.cpp  velocity.hpp
awapi/autoware_api_msgs/: CMakeLists.txt  package.xml
awapi/autoware_api_msgs/msg/: AwapiAutowareStatus.msg  AwapiVehicleStatus.msg  DoorControlCommand.msg  VelocityLimit.msg
control/latlon_muxer/: CMakeLists.txt  package.xml
control/latlon_muxer/src/: main.cpp  node.cpp
control/mpc_follower/: CMakeLists.txt  README.md  package.xml
control/mpc_follower/cfg/: MPCFollower.cfg
control/mpc_follower/config/: mpc_follower.param.yaml  mpc_follower_param.yaml  plot_juggler_mpc_follower.xml  rqt_multiplot_mpc_follower.xml  rqt_multiplot_steer_simulator.xml
control/mpc_follower/launch/: mpc_follower.launch  mpc_follower.launch.xml  steer_simulator.launch
control/mpc_follower/src/: interpolate.cpp  lowpass_filter.cpp  mpc_follower_core.cpp  mpc_follower_node.cpp  mpc_trajectory.cpp  mpc_utils.cpp  steer_simulator.py
control/velocity_controller/: CMakeLists.txt  package.xml  velocity_controller-design.ja.md  velocity_controller-design.md
control/velocity_controller/cfg/: VelocityController.cfg
control/velocity_controller/config/: plot_juggler_velocity_controller.xml  rqt_multiplot_velocity_controller.xml  velocity_controller.param.yaml  velocity_controller_param.yaml
control/velocity_controller/launch/: velocity_controller.launch  velocity_controller.launch.xml
control/velocity_controller/src/: pid.cpp  velocity_controller_core.cpp  velocity_controller_mathutils.cpp  velocity_controller_node.cpp  velocity_controller_utils.cpp
control/velocity_controller/test/: test_debug_values.cpp  test_pid.cpp  test_smooth_stop.cpp  test_velocity_controller.cpp  test_velocity_controller_utils.cpp
map/map_tf_generator/: CMakeLists.txt  package.xml
map/map_tf_generator/nodes/: map_tf_generator.cpp
map/map_tf_generator/src/: map_tf_generator_node.cpp
planning/path_test_publisher/: CMakeLists.txt  package.xml
planning/path_test_publisher/src/: main.cpp  node.cpp
system/autoware_error_monitor/: CMakeLists.txt  package.xml
system/autoware_error_monitor/config/: autoware_error_monitor.param.yaml  autoware_error_monitor.planning_simulation.param.yaml  autoware_error_monitor.planning_simulation.yaml  autoware_error_monitor.yaml
system/autoware_error_monitor/launch/: autoware_error_monitor.launch  autoware_error_monitor.launch.xml  autoware_error_monitor_node.launch  autoware_error_monitor_node.launch.py
system/autoware_error_monitor/src/: autoware_error_monitor_core.cpp  autoware_error_monitor_node.cpp
system/autoware_state_monitor/: CMakeLists.txt  Readme.md  package.xml
system/autoware_state_monitor/config/: autoware_state_monitor.param.yaml  autoware_state_monitor.planning_simulation.param.yaml  autoware_state_monitor.planning_simulation.yaml  autoware_state_monitor.yaml
system/autoware_state_monitor/launch/: autoware_state_monitor.launch  autoware_state_monitor.launch.xml
system/emergency_handler/: CMakeLists.txt  README.md  package.xml
system/emergency_handler/config/: emergency_handler.param.yaml  emergency_handler.yaml  state_timeout_checker.yaml
system/emergency_handler/launch/: emergency_handler.launch  emergency_handler.launch.xml
system/emergency_handler/src/: emergency_handler_core.cpp
system/topic_state_monitor/: CMakeLists.txt  Readme.md  package.xml
system/topic_state_monitor/cfg/: TopicStateMonitor.cfg
system/topic_state_monitor/launch/: topic_state_monitor.launch  topic_state_monitor.launch.xml
system/topic_state_monitor/src/: topic_state_monitor_core.cpp  topic_state_monitor_node.cpp
system/velodyne_monitor/: CMakeLists.txt  Readme.md  package.xml
system/velodyne_monitor/config/: velodyne_monitor.yaml
system/velodyne_monitor/launch/: velodyne_monitor.launch
system/velodyne_monitor/src/: velodyne_monitor.cpp  velodyne_monitor_node.cpp
tmp/steering_offset_estimator/: CMakeLists.txt  package.xml
tmp/steering_offset_estimator/launch/: steering_offset_estimtor.launch.xml
tmp/steering_offset_estimator/src/: node.cpp  steer_offset_estimator_node.cpp
tmp/trajectory_loader/: CMakeLists.txt  CMakeLists_org.txt  package.xml  package_org.xml
tmp/trajectory_loader/data/: sample.csv
tmp/trajectory_loader/launch/: sample.launch.xml
tmp/trajectory_loader/src/: main.cpp  node.cpp  node_org.cpp
tmp/trajectory_test_publisher/: CMakeLists.txt  package.xml
tmp/trajectory_test_publisher/src/: main.cpp  node.cpp
tmp_autoware_auto_dependencies/lidar_integration/: CMakeLists.txt  package.xml
tmp_autoware_auto_dependencies/lidar_integration/design/: lidar_integration-design.md
tmp_autoware_auto_dependencies/lidar_integration/lidar_integration/: __init__.py  get_open_port.py  lidar_checker.py  lidar_launch_description.py  point_cloud_mutation_launch_description.py
tmp_autoware_auto_dependencies/lidar_integration/scripts/: get_open_port.py
tmp_autoware_auto_dependencies/lidar_utils/: CMakeLists.txt  lidar_utils-extras.cmake  package.xml
(+2461 files in other folders)
