<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>autoware_iv_internal_api_adaptor</name>
  <version>0.0.0</version>
  <description>The autoware_iv_internal_api_adaptor package</description>
  <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_api_utils</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>autoware_control_msgs</depend>
  <depend>autoware_external_api_msgs</depend>
  <depend>autoware_localization_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <!-- for backward compatibility -->
  <!-- nolint --> <depend>autoware_auto_system_msgs</depend>
  <!-- nolint --> <depend>autoware_system_msgs</depend>
  <!-- nolint --> <depend>autoware_iv_auto_msgs_converter</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
