<?xml version="1.0"?>
<package format="2">
  <name>autoware_api_msgs</name>
  <version>0.1.0</version>
  <description>The autoware_api_msgs package</description>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <author email="tomoya.kimura@tier4.jp">Tomoya Kimura</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
