<?xml version="1.0"?>
<package format="2">
  <name>autoware_api_msgs</name>
  <version>0.1.0</version>
  <description>The autoware_api_msgs package</description>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <author email="tomoya.kimura@tier4.jp">Tomoya Kimura</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_system_msgs</depend>
  <export></export>
</package>
