<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>velocity_controller</name>
  <version>0.0.1</version>
  <description>vehicle velocity controller as a ROS 2 node</description>
  <maintainer email="makoto.kurihara@tier4.jp">Makoto Kurihara</maintainer>
  <maintainer email="horibe.takamasa@gmail.com">Takamasa HORIBE</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>autoware_control_msgs</depend>
  <depend>autoware_debug_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_utils</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>signal_processing</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>vehicle_info_util</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
