<?xml version="1.0"?>
<package format="3">

  <name>path_test_publisher</name>
  <version>0.1.0</version>
  <description>The path_test_publisher package</description>
  <maintainer email="tier4@todo.todo">tier4</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>autoware_planning_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
