<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_error_monitor</name>
  <version>0.1.1</version>
  <description>The autoware_error_monitor package in ROS2</description>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>

  <depend>autoware_system_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>fmt</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
