<?xml version="1.0"?>
<package format="2">
  <name>topic_state_monitor</name>
  <version>0.1.0</version>
  <description>The topic_state_monitor package</description>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>topic_tools</depend>

  <export>
  </export>
</package>
